--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <section class="section">
             <div class="container">
                 <h2 class="section-title">5. The Impact of Digital Innovation on Visual Storytelling</h2>
-                <p class="section-text">The integration of digital technologies into visual storytelling has opened new doors for creative expression. Platforms like XXBrits have embraced digital innovation, incorporating cutting-edge tools such as virtual reality (VR), augmented reality (AR), and artificial intelligence (AI) to enhance how heritage is communicated.</p>
+                <p class="section-text">The integration of <a href="https://roberthinsom.github.io/xxbrits/">digital technologies</a> into visual storytelling has opened new doors for creative expression. Platforms like XXBrits have embraced digital innovation, incorporating cutting-edge tools such as virtual reality (VR), augmented reality (AR), and artificial intelligence (AI) to enhance how heritage is communicated.</p>
                 <p class="section-text">For example, VR can immerse viewers in historical reconstructions, like walking through a Victorian-era street or experiencing a royal ceremony firsthand. AR can be used to bring artifacts and landmarks to life, allowing users to interact with historical objects in their own space. Meanwhile, AI has been used to analyze historical images and video footage, providing deeper context and information about the visual content.</p>
             </div>
         </section>
