--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="IZ6LQPyhv1u16ULUwwgx6y4Vx6rD9_SCEjyZuXFV7Fc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Power of Visual Storytelling on XXBrits: A Modern Take on British Heritage">
